refactor(quality): toList() in MetricsControllerIT auth helper (S6204)